# jrystal

./: .buildinfo  .gitignore  Makefile  README.md  align_paw.py  compare_paw.py  compare_paw_jiaxi.py  config.yaml  developing-log.md  genindex.html  glossary.html  glossary.md  index.html  installation.html  jrystal_logo_ascii.txt  jrystal_utf8.txt  main.py  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  roadmap.html  search.html  searchindex.js  setup.cfg  setup.py  test_pp.py
.github/: workflowslint.yml
_modules/: index.html
_sources/: glossary.md  index.rst  installation.rst  quickstart.md
api/: _src.html  calc.html  calc.rst  crystal.html  energy.html  entropy.html  entropy.rst  ewald.html  grid.html  grid.rst  hamiltonian.html  index.html  kinetic.html  occupation.html  potential.html  pseudopotential.html  pw.html  pw.rst  sbt.html
devs/: align.py  align_math_quantity.md  align_paw.py  align_qe.py  align_xc.py  calc_paw.py  compare_paw_jiaxi.py  gpaw_load.py  paw_grid_convergence.py  test.md  test_conjugation.py  test_diamond.py  test_overlap.py
docs/: conf.py  glossary.md  index.rst  installation.rst  roadmap.rst  symbol.md
examples/: band_structure.html  config.html  crystal.html  dft100lines.html  example_crystal.py  example_pwd.py  example_total_energy.py  ground_state.html  index.html  scf.html  walkthrough.ipynb
geometries/: diamond1.xyz  diamond2.xyz  diamond8.xyz  si8.xyz  srtio3.xyz  zns_w.xyz
geometry/: al_bcc.xyz  al_conventional.xyz  al_primitive.xyz  diamond.xyz  gaas.xyz  ge.xyz  graphene.xyz  li_slab.xyz  mg.xyz  na.xyz  si.xyz  zns_zb.xyz
jrystal/: __init__.py  band_structure.py  bloch.py  config.py  crystal.py  energy.py  entropy.py  errors.py  ewald.py  grid.py  hamiltonian.py  kinetic.py  occupation.py  occupations.py  optim.py  potential.py  pw.py  pw_test.py  total_energy.py  total_energy_spmd.py  train.py  training_utils.py  utils.py  visualization.py  wave.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
notebooks/: autofd.ipynb  band structure.ipynb  half_freq.ipynb  total energy.ipynb  walkthrough.ipynb
pseudopotential/: Ag.11.LDA  Ag.11.PBE  Ag.11.RPBE  Ag.11.revPBE  Ag.LDA  Ag.PBE  Ag.RPBE  Ag.revPBE  (+361 more)
(+416 files in other folders)
